Added some info

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Lawyers | About Us</title>
+		<title>Gbenga Adeyemi & Co. | About Us</title>
 		
 		<!-- Loading third party fonts -->
 		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -58,29 +58,24 @@
 						<p>Iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus.</p>
 
 						<div class="team">
-							<figure class="team-image"><img src="dummy/person-1.png" alt="person-1"></figure>
-							<h3 class="team-name">Steven Simon</h3>
-							<small class="team-desc">Main mechaninc</small>
+							<figure class="team-image"><img src="lawyers/Mr-Gbenga-Adeyemi.jpg" alt="person-1"></figure>
+							<h3 class="team-name">Mr Gbenga Adeyemi</h3>
+							<small class="team-desc">Founder and Legal Practitioner</small>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor ut tenetur dicta deserunt fugiat itaque voluptates doloremque dolore accusamus suscipit</p>
 						</div>
 						<div class="team">
-							<figure class="team-image"><img src="dummy/person-2.png" alt="person-2"></figure>
-							<h3 class="team-name">George Stevens</h3>
-							<small class="team-desc">Painter</small>
+							<figure class="team-image"><img src="lawyers/Olaolu-Alao.jpg" alt="person-2"></figure>
+							<h3 class="team-name">Olaolu Alao</h3>
+							<small class="team-desc">Legal Practitioner</small>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus quisquam hic cum laboriosam, est saepe amet magni labore, corrupti recusandae</p>
 						</div>
 						<div class="team">
-							<figure class="team-image"><img src="dummy/person-3.png" alt="person-3"></figure>
-							<h3 class="team-name">David Smith</h3>
-							<small class="team-desc">Engineer</small>
+							<figure class="team-image"><img src="lawyers/Oluwatayo-Gbadegesin.jpg" alt="person-3"></figure>
+							<h3 class="team-name">Oluwatayo Gbadegesin</h3>
+							<small class="team-desc">Secretary</small>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti quisquam, odit! Mollitia, porro. Quidem officiis, harum tempora, voluptates distinctio quis</p>
 						</div>
-						<div class="team">
-							<figure class="team-image"><img src="dummy/person-4.png" alt="person-4"></figure>
-							<h3 class="team-name">Howarrd Newman</h3>
-							<small class="team-desc">Computer Specialist</small>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae repellat ipsum optio nam! Error at minus fugit est voluptatum, placeat,</p>
-						</div>
+						
 					</div>
 				</div>
 
