--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 						<img src="images/logo.png" alt="Company Name" class="logo">
 						<div class="branding-copy">
 							<h1 class="site-title">Gbenga Adeyemi & Co.</h1>
-							<small class="site-description">We make all your problems go away</small>
+							<small class="site-description">Professional Legal Help
+							</small>
 						</div>
 					</a>
 
@@ -55,7 +56,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-8">
-								<figure><img src="assets/lawyers.jpg" alt=""></figure>
+								<figure><img src="assets/lady-justice-2388500_1920.jpg" alt=""></figure>
 							</div>
 							<div class="col-md-4">
 								<div class="hero-content">
@@ -113,11 +114,11 @@
 									<header>
 										<img src="images/icon-1.png" class="feature-icon">
 										<div class="feature-title-copy">
-											<h2 class="feature-title">Criminal Things</h2>
-											<small class="feature-subtitle">Lorem ipsum dolor sit</small>
+											<h2 class="feature-title">General Litigation </h2>
+											<small class="feature-subtitle"></small>
 										</div>
 									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias doloremque, quis, eaque minus harum modi eius veritatis consequuntur expedita impedit ad, facilis. Asperiores assumenda aperiam atque, accusamus cupiditate vero sit!</p>
+									<p>The firm is very vast and versatile in litigation practice. We have successfully handled matters in virtually all that superior courts of record and specialized courts to which state high courts including the court of the Federal Capital Territory, Abuja, Court of Appeal, Supreme Court, National Industrial Court, Securities and investment Tribunal et al.</p>
 									<a href="#" class="more-link">Read More</a>
 								</div>
 							</div>
@@ -126,11 +127,22 @@
 									<header>
 										<img src="images/icon-2.png" class="feature-icon">
 										<div class="feature-title-copy">
-											<h2 class="feature-title">Estate Planning</h2>
-											<small class="feature-subtitle">Lorem ipsum dolor sit</small>
+											<h2 class="feature-title">Energy and Natural Resource</h2>
+											<small class="feature-subtitle"></small>
 										</div>
 									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias doloremque, quis, eaque minus harum modi eius veritatis consequuntur expedita impedit ad, facilis. Asperiores assumenda aperiam atque, accusamus cupiditate vero sit!</p>
+									<p>our specialization in this sector covers:
+
+										⦁	Oil and Gas
+										⦁	Mining
+										⦁	Power
+										⦁	Solid Minerals
+										⦁	Water Resources
+										⦁	Arbitration
+										⦁	Negotiation
+										⦁	Mediation and
+										⦁	Conciliation & commercial litigation
+										</p>
 									<a href="#" class="more-link">Read More</a>
 								</div>
 							</div>
@@ -139,11 +151,11 @@
 									<header>
 										<img src="images/icon-3.png" class="feature-icon">
 										<div class="feature-title-copy">
-											<h2 class="feature-title">Employment Law</h2>
-											<small class="feature-subtitle">Lorem ipsum dolor sit</small>
+											<h2 class="feature-title">Intellectual Properties</h2>
+											<small class="feature-subtitle"></small>
 										</div>
 									</header>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias doloremque, quis, eaque minus harum modi eius veritatis consequuntur expedita impedit ad, facilis. Asperiores assumenda aperiam atque, accusamus cupiditate vero sit!</p>
+									<p>Our firm has extensive experience in intellectual Property related transactions and has an impressive client base consisting of client from around the globe covering various industry group. we render a watch service which helps clients monitor their IP interests.</p>
 									<a href="#" class="more-link">Read More</a>
 								</div>
 							</div>
@@ -156,40 +168,41 @@
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum reiciendis eveniet suscipit, totam doloribus iure quasi quos, quidem quam labore pariatur nesciunt rem unde odio a ex vel ullam, quis!</p>
+											<p>Get the best</p>
 											<footer>
 												<cite>Jason Howard</cite>
-												<span>(CEO, Books author)</span>
+												<span>(Books author)</span>
 											</footer>
 										</blockquote>
 									</li>
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum reiciendis eveniet suscipit, totam doloribus iure quasi quos, quidem quam labore pariatur nesciunt rem unde odio a ex vel ullam, quis!</p>
+											<p>Professional Legal Help</p>
 											<footer>
-												<cite>Jason Howard</cite>
-												<span>(CEO, Books author)</span>
+												<cite>Adeyemi seyi</cite>
+												<span>(IT)</span>
 											</footer>
 										</blockquote>
 									</li>
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum reiciendis eveniet suscipit, totam doloribus iure quasi quos, quidem quam labore pariatur nesciunt rem unde odio a ex vel ullam, quis!</p>
+											<p>We will achieve justice for you</p>
 											<footer>
-												<cite>Jason Howard</cite>
-												<span>(CEO, Books author)</span>
+												<cite>oluwasewa</cite>
+												<span>(Books author)</span>
 											</footer>
 										</blockquote>
 									</li>
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum reiciendis eveniet suscipit, totam doloribus iure quasi quos, quidem quam labore pariatur nesciunt rem unde odio a ex vel ullam, quis!!!</p>
+											<p>Integrity
+											</p>
 											<footer>
-												<cite>Jason Howard</cite>
-												<span>(CEO, Books author)</span>
+												<cite>Mr-Gbenga-Adeyemi</cite>
+												<span>(CEO)</span>
 											</footer>
 										</blockquote>
 									</li>
