--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" id="branding">
-						<img src="images/logo.png" alt="Company Name" class="logo">
+						<img src="images/logo 2.png" alt="Company Name" class="logo">
 						<div class="branding-copy">
 							<h1 class="site-title">Gbenga Adeyemi & Co.</h1>
 							<small class="site-description">Professional Legal Help
