--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 									<input type="text" id="website" placeholder="Website...">
 									<textarea name="" id="message" placeholder="Message..."></textarea>
 									<div class="text-right">
-										<input type="submit" value="Send message">
+										<a href="mailto:gbengaadeyemiandco@gmail.com"><input type="submit" value="Send message"></a>
 									</div>
 								</form>
 							</div>
