--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
 						
 						<div class="quote-section">
 							<div class="quote-slider">
-								<h2>YOLO</h2>
+								<h2>Reviews</h2>
 								<ul class="slides">
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
 											<p>Get the best</p>
 											<footer>
-												<cite>Jason Howard</cite>
+												<cite>Howard john</cite>
 												<span>(Books author)</span>
 											</footer>
 										</blockquote>
