--- a/service.html
+++ b/service.html
@@ -159,7 +159,7 @@
 						</div>
 
 						<div class="cta">
-							if you areinterested - <a href="contact.html">Contact Us</a>
+							if you areinterested - <a href="mailto:gbengaadeyemiandco@gmail.com">Contact Us</a>
 						</div>
 					</div> 
 				</div>
