--- a/about.html
+++ b/about.html
@@ -80,6 +80,9 @@
 						
 					</div>
 				</div>
+				<div class="cta">
+					For Professional Legal Help - <a href="mailto:gbengaadeyemiandco@gmail.com">EMAIL US</a>
+				</div>
 
 			</main> <!-- .main-content -->
 
