--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						
 						<div class="quote-section">
 							<div class="quote-slider">
-								<h2>YOLO</h2>
+								<h2>REVIEWS</h2>
 								<ul class="slides">
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
@@ -210,6 +210,9 @@
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="cta">
+					For Professional Legal Help - <a href="mailto:gbengaadeyemiandco@gmail.com">EMAIL US</a>
 				</div>
 
 			</main> <!-- .main-content -->
