--- a/service.html
+++ b/service.html
@@ -8,6 +8,7 @@
 		<title>Gbenga Adeyemi & Co. | Services</title>
 		
 		<!-- Loading third party fonts -->
+		<link rel="icon" href="images/logo.png" type="image/x-icon">
 		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
 		<link href="fonts/novecento-font/novecento-font.css" rel="stylesheet" >
 
