--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>Get the best</p>
+											<p>Client-focused legal services and Trustworthy and reliable legal counsel</p>
 											<footer>
 												<cite>Jason Howard</cite>
 												<span>(Books author)</span>
@@ -178,7 +178,7 @@
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>Professional Legal Help</p>
+											<p>Respected GENERAL LITIGATION law firm and Compassionate family law lawyers </p>
 											<footer>
 												<cite>Adeyemi seyi</cite>
 												<span>(IT)</span>
@@ -188,7 +188,7 @@
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>We will achieve justice for you</p>
+											<p>Trusted legal representation and Dedicated to achieving justice</p>
 											<footer>
 												<cite>oluwasewa</cite>
 												<span>(Books author)</span>
@@ -198,7 +198,7 @@
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>Integrity
+											<p>Top Aduja law firm
 											</p>
 											<footer>
 												<cite>Mr-Gbenga-Adeyemi</cite>
