--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>Get the best</p>
+											<p>Compassionate family law lawyers and Dedicated to achieving justice</p>
 											<footer>
 												<cite>Howard john</cite>
 												<span>(Books author)</span>
@@ -180,7 +180,7 @@
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>Professional Legal Help</p>
+											<p>Trustworthy and reliable legal counsel and Client-focused legal services</p>
 											<footer>
 												<cite>Adeyemi seyi</cite>
 												<span>(IT)</span>
@@ -190,7 +190,7 @@
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>We will achieve justice for you</p>
+											<p>Skilled trial lawyers in Abuja and Proven track record in LITIGATION</p>
 											<footer>
 												<cite>oluwasewa</cite>
 												<span>(Books author)</span>
@@ -200,7 +200,7 @@
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>Integrity
+											<p>Top Aduja law firm and Trusted legal representation
 											</p>
 											<footer>
 												<cite>Mr-Gbenga-Adeyemi</cite>
