--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<img src="images/logo 2.png" alt="Company Name" class="logo">
 						<div class="branding-copy">
 							<h1 class="site-title">Gbenga Adeyemi & Co.</h1>
-							<small class="site-description">Professional Legal Help
+							<small class="site-description">Law Firm
 							</small>
 						</div>
 					</a>
