--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<div class="hero-content">
 									<h1 class="hero-title">Legal Practitioners / Notaries Public</h1>
 									<p>Professional Legal Help. We will achieve justice for you.</p>
-									<a href="#welcome-text" class="button">Read more</a>
+									<a href="about.html" class="button">Read more</a>
 								</div>
 							</div>
 						</div>
@@ -75,7 +75,7 @@
 						<div class="row">
 							<div class="col-md-8" id="welcome-text">
 								<h2>Welcome To Gbenga Adeyemi & co​.</h2>
-								<p>Gbenga Adeyemi & co is a dynamic and client-focused law firm with its office in Abuja, Nigeria. Founded in 2009, the firm has firmly secured its place as a leading general litigation, dispute resolution and full service commercial law firm in Nigeria with a goal to represent and advice Clients in the best traditions of the legal profession whilst taking cognizance of modern realities and developments. This firm takes pride in its reputitionof excellence, Pragmatism, responsiveness and uncompromised professionalism. In all our transactions, we ensure that we provide component, efficient and effective legal representation for clients in an atmosphere of absolute trust and Confindence.
+								<p>Gbenga Adeyemi & co is a dynamic and client-focused law firm with its office in Abuja, Nigeria. We are one of the Top Aduja law firm with a Trusted legal representation of satisfied clients. Founded in 2009, the firm has firmly secured its place as a leading general litigation, dispute resolution and full service commercial law firm in Nigeria with a goal to represent and advice Clients in the best traditions of the legal profession whilst taking cognizance of modern realities and developments. This firm takes pride in its reputition of excellence, Pragmatism, responsiveness and uncompromised professionalism. In all our transactions, we ensure that we provide component, efficient and effective legal representation for clients in an atmosphere of absolute trust and Confindence in our Experienced litigation lawyers.
 									
 									The firm provides innovative and top quality legal services through a dedicated team of lawyers and support staff. Our legal expertise and in-depth understanding of the local environment put us in a position to offer sound and practical services to our numerous clients</p>
 							</div>
@@ -120,7 +120,7 @@
 										</div>
 									</header>
 									<p>The firm is very vast and versatile in litigation practice. We have successfully handled matters in virtually all that superior courts of record and specialized courts to which state high courts including the court of the Federal Capital Territory, Abuja, Court of Appeal, Supreme Court, National Industrial Court, Securities and investment Tribunal et al.</p>
-									<a href="#" class="more-link">Read More</a>
+									<a href="about.html" class="more-link">Read More</a>
 								</div>
 							</div>
 							<div class="col-md-4">
@@ -144,7 +144,7 @@
 										⦁	Mediation and
 										⦁	Conciliation & commercial litigation
 										</p>
-									<a href="#" class="more-link">Read More</a>
+									<a href="about.html" class="more-link">Read More</a>
 								</div>
 							</div>
 							<div class="col-md-4">
@@ -157,7 +157,7 @@
 										</div>
 									</header>
 									<p>Our firm has extensive experience in intellectual Property related transactions and has an impressive client base consisting of client from around the globe covering various industry group. we render a watch service which helps clients monitor their IP interests.</p>
-									<a href="#" class="more-link">Read More</a>
+									<a href="about.html" class="more-link">Read More</a>
 								</div>
 							</div>
 						</div>
@@ -190,7 +190,7 @@
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>Skilled trial lawyers in Abuja and Proven track record in LITIGATION</p>
+											<p>Skilled trial lawyers in Abuja and Proven track record in litigation</p>
 											<footer>
 												<cite>oluwasewa</cite>
 												<span>(Books author)</span>
@@ -200,7 +200,7 @@
 									<li>
 										<figure class="quote-avatar"><img src="dummy/avatar.png"></figure>
 										<blockquote>
-											<p>Top Aduja law firm and Trusted legal representation
+											<p>Affordable legal services in Abuja with the best professionalism 
 											</p>
 											<footer>
 												<cite>Mr-Gbenga-Adeyemi</cite>
