--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 												<p>
 													<a href="tel:+2348033513386">Phone:<br> (234)8033513386,<br>(234)8143893456
 													</a>
-													<a href="mailto:gbengaadeyemiandco@gmail.com">Email:<br> gbengaadeyemiandco@gmail.com <br> tadesewa2000@yahoo.com </a> <br>
+													<a href="mailto:gbengaadeyemiandco@gmail.com">Email:<br> olugbenga@gbengaadeyemiandco <br> gbengaadeyemiandco@gmail.com <br> tadesewa2000@yahoo.com </a> <br>
 												</p>
 											</div>
 										</div>
